#Nmap Changelog ($Id$); -*-text-*-

o [ncat][GH#1214][GH#1230][GH#1439] New ncat option provides control over
  whether proxy destinations are resolved by the remote proxy server or
  locally, by Ncat itself. See option --proxy-dns. [nnposter]

o [NSE][GH#1478] Updated script ftp-syst to prevent potential endless looping.
  [nnposter]

o [NSE][GH#1457] New script, ubiquiti-discovery, which extracts information from
  the Ubiquiti Discovery service and assists version detection. [Tom Sellers]

o [GH#1454] New service probes and match lines for v1 and v2 of the Ubiquiti
  Discovery protocol. Devices often leave the related service open and it
  exposes significant amounts of information as well as the risk of being used
  as part of a DDoS. New nmap-payload entry for v1 of the protocol. [Tom Sellers]

o [NSE] Removes hostmap-ip2hosts.nse as the API has been broken for a while
  and the service will be completely shutdown on Feb 17th. [Paulino Calderon]

o [NSE][GH#1318] Adds TN3270E support and additional improvements to tn3270.lua 
  and updates tn3270-screen.nse to display the new setting. [mainframed]

o [NSE][GH#1346] Updates product codes and adds a check for response length in
  enip-info.nse. The script now uses string.unpack. [NothinRandom]

o [Ncat][GH#1310][GH#1409] Temporary RSA keys are now 2048-bit to resolve
  a compatibility issue with OpenSSL library configured with security level 2,
  as seen on current Debian or Kali.
  [Adrian Vollmer, nnposter]

o [NSE][GH#1227] Fix a crash (double-free) when using SSH scripts against
  non-SSH services. [Daniel Miller]

o [Zenmap] Fix a crash when Nmap executable cannot be found and the system PATH
  contains non-UTF-8 bytes, such as on Windows. [Daniel Miller]

o [Zenmap] Fix a crash in results search when using the dir: operator:
    AttributeError: 'SearchDB' object has no attribute 'match_dir'
  [Daniel Miller]

o [Ncat][GH#1372] Fixed an issue with Ncat -e on Windows that caused early